# --------------------------------
# pion automake configuration file
# --------------------------------

pion_utils_includedir = $(includedir)/pion/utils
pion_utils_include_HEADERS = pion_asio.hpp pion_assert.hpp pion_chrono.hpp pion_condition_variable.hpp pion_exception.hpp pion_filesystem.hpp pion_functional.hpp pion_memory.hpp pion_mutex.hpp pion_random.hpp pion_regex.hpp pion_stdint.hpp pion_string.hpp pion_system_error.hpp pion_thread.hpp pion_tribool.hpp
